# formalz-fchecker

./: .gitignore  .gitlab-ci.yml  .gitmodules  API.md  Daikon.hs  Folds.hs  HelperFunctions.hs  Main.hs  README.md  README.txt  Settings.hs  Substitute.hs  Types.hs  Verifier.hs  WLP.hs  ci-install.sh  deploy.sh  install_z3.sh  javawlp.cabal  javawlp.md  stack.yaml  thesis.tex
Equivalent mutations/: Fibonacci.java  MinsMaxs.java  Stack.cs  Stack.java  Vector.java
Equivalent mutations/Mutants/: 2D_to_1D_no_counter.java  BST_no_parent.cs  BST_no_parent.java  Fibonacci_no_extra_prints.cs  MinsMaxs_R1.java  MinsMaxs_R2.java  MinsMaxs_R3.java  Normalizer_R2.java  Normalizer_R4.java  Stack_bool_is_result.java  Stack_constructor_duplication.java  Stack_useless_property.cs  Stack_useless_property.java  Vector_R1.java  Vector_R2.java  Vector_R3.java
Equivalent mutations/original C# code/: 2D_to_1D.cs  Matrix.cs
Results/: Daikon results.txt  arrays1_true_returnValue != null_returnValueVar == returnValue_False_False_2  basesecantsolver_true_returnValue != null_returnValueVar == returnValue_False_False_1  basesecantsolver_true_returnValue != null_true_False_False_1  gradientfunction_true_returnValue != null_returnValueVar == returnValue_False_False_1  gradientfunction_true_returnValue != null_returnValueVar == returnValue_True_False_1  gradientfunction_true_returnValueVar == returnValue_returnValueVar == returnValue_False_False_1  gradientfunction_true_true_returnValueVar == returnValue_False_False_1  gradientfunction_true_true_true_False_False_1  iterator_true_returnValue != null_true_False_False_1  iterator_true_true_true_False_False_1
Results/False Positives/: true_returnValue != null_returnValueVar == returnValue_False_False_1  true_returnValue != null_true_False_False_1  true_true_true_False_False_1
Tests/: 2d-arrays1.java  BaseSecantSolver.java  GradientFunction.java  OpenIntToDoubleHashMap.java  Test1.java  Test2.java  arrays.java  arrays1.java  loops.java  methods.java  objects.java  side-effects.java  switch.java  try-catch-finally.java
Tests/daikon tests/: BaseSecantSolver.java
Tests/original tests/: Iterator.java
Tests/simple tests/: side-effects.java  try-catch-finally.java
app/: Main.hs
daikon equivalent mutations/: 2D_to_1D.java  Normalizer.java  Vector.java
daikon equivalent mutations/Mutants/: 2D_to_1D_no_counter.java  BST_no_parent.java  Normalizer_R2.java  Normalizer_R4.java  Vector_R1.java  Vector_R2.java  Vector_R3.java  Vectors01Generator_no_for.java
docs/: API.md  DEPLOY.md  EDSL.md  STRUCTURE.md
examples/: 2d-arrays1.java  Arrays0.java  Arrays2D.java  DuncanExample.java  MethodCalls.java  SideEffects.java  SimpleArrayExprs.java  TryCatchFinally.java  XException.java  XField.java  arrays1.java  arrays2.java  arrays3.java  javawpl_edsl.java  loops.java  methods.java  model.txt  objects.java  simple.java  switch.java
examples/test_equiv/: Arrays.java  Doubles.java  Reals.java  Test.java
experiments/tools/t3daikon/: build.xml
experiments/tools/t3daikon/src/: MyDaikonUtils.java  MyT3.java
experiments/wermer/: Daikon.hs  Settings.hs
experiments/wermer/Equivalent mutations/: 2D_to_1D.java  Stack.java
experiments/wermer/Equivalent mutations/Mutants/: 2D_to_1D_no_1D.java  BST_no_parent.java  MinsMaxs_R3.java  Normalizer_R1.java  Normalizer_R2.java  Stack_useless_property.java  Vector_R1.java  Vector_R3.java  Vectors01Generator_print_string.java
experiments/wermer/Equivalent mutations/original C# code/: 2D_to_1D_no_counter.cs  Fibonacci.cs  Stack_bool_is_result.cs  Vectors01Generator_no_for.cs  Vectors01Generator_print_string.cs
experiments/wermer/Results/: Daikon results.txt  arrays1_true_returnValue != null_returnValueVar == returnValue_True_True_1  basesecantsolver_true_true_returnValueVar == returnValue_False_False_1  basesecantsolver_true_true_true_False_False_1  gradientfunction_true_returnValue != null_true_False_False_1  iterator_true_true_returnValueVar == returnValue_False_False_1
experiments/wermer/Results/False Positives/: true_returnValue != null_returnValueVar == returnValue_False_False_1  true_returnValueVar == returnValue_returnValueVar == returnValue_False_False_1  (+1 more)
experiments/wermer/daikon equivalent mutations/: BST.java  MinsMaxs.java
experiments/wermer2/: Experiment.hs  README.md  WlpExperiment.hs  build.xml  compileSubjects.sh  generateMutants.sh  mutation.mml
experiments/wermer2/t3daikongen/: Generate_Suite_and_Invs.java  MyT3SuiteGenerator.java
experiments/wermerOriginal/: Main.hs  README.md
experiments/wermerOriginal/Equivalent mutations/: BST.java  Normalizer.java  Vector.java  Vectors01Generator.java
experiments/wermerOriginal/Results/: arrays1_true_returnValue != null_returnValueVar == returnValue_False_False_1  arrays1_true_returnValueVar == returnValue_returnValueVar == returnValue_False_False_1  arrays1_true_true_true_False_False_1  iterator_true_returnValue != null_returnValueVar == returnValue_False_False_1
immortal/: javawlp.yml
impress_edsl/: .gitignore
src/: API.hs  Folds.hs  Language  Model.hs  Server.hs  SimpleFormulaChecker.hs  Verifier.hs  WLP.hs
src/JavaHelpers/: Folds.hs  HelperFunctions.hs  Types.hs
src/Javawlp/: API.hs  SimpleFormulaChecker.hs
src/Javawlp/Engine/: Folds.hs  HelperFunctions copy.hs  HelperFunctions.hs  Substitute.hs  Types.hs  Verifier.hs  WLP copy.hs  WLP.hs
src/Language/: README.md
src/Language/Java/: Parser.hs  Pretty.hs  Syntax.hs
src/LogicIR/: Eval.hs  Expr.hs  Fold.hs  Normalizer.hs  Null.hs  Parser.hs  ParserUtils.hs  Preprocess.hs  Pretty.hs  TypeChecker.hs
src/LogicIR/Backend/: API.hs  Model.hs  ModelGenerator.hs  Null.hs  Pretty.hs  QuickCheck.hs  Rewrite.hs  Test.hs  Z3.hs
src/LogicIR/Frontend/: Java.hs
src/ModelParser/: Lexer.x  Model.hs  Parser.y  README.md
src/z3_tests/: equivalence.py  forall.py
test/: Spec.hs  TEquivalenceClasses.hs  TExamples.hs  TFeedback.hs  TIREval.hs  TIRParser.hs  TIRQuickCheck.hs  TIRTest.hs  TModelParser.hs  TNormalizer.hs  TServer.hs  TZ3Model.hs
test/test_files/: Arrays.java  Arrays2d.java  Reals.java
(+71 files in other folders)
