name:                javawlp
version:             0.1.0.0
-- synopsis: description: author: maintainer:
homepage:            https://git.science.uu.nl/impresshs/javawlp
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable javawlp
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , javawlp
                     , optparse-applicative
  default-language:    Haskell2010

library
  hs-source-dirs:      src
  exposed-modules:     Javawlp.Engine.Types
                     , Javawlp.Engine.HelperFunctions
                     , Javawlp.Engine.Folds
                     , LogicIR.Expr
                     , LogicIR.Fold
                     , LogicIR.Parser
                     , LogicIR.Null
                     , LogicIR.Pretty
                     , LogicIR.Frontend.Java
                     , LogicIR.Backend.Z3
                     , LogicIR.Backend.Test
                     , LogicIR.Backend.ModelGenerator
                     , LogicIR.Backend.Pretty
                     , LogicIR.Backend.Null
                     , LogicIR.Fold
                     , LogicIR.Eval
                     , LogicIR.Backend.API
                     , LogicIR.Backend.Model
                     , Language.Java.Lexer
                     , Language.Java.Parser
                     , Language.Java.Pretty
                     , Language.Java.Syntax
                     , Language.Java.Syntax.Exp
                     , Language.Java.Syntax.Types
                     , SimpleFormulaChecker
  build-depends:       base >= 4.7 && < 5
                     , random
                     , parsec
                     , z3
                     , language-java
                     , array
                     , pretty
                     , mtl
                     , containers
  default-language:    Haskell2010
  -- build-tools:         alex, happy
  -- other-modules:       ModelParser.Lexer, ModelParser.Parser

test-suite javawlp-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       TExamples
                     , TIRParser
                     , TIRTest
                     , TEquivalenceClasses
                     , TZ3Model
  build-depends:       base
                     , javawlp
                     , test-framework
                     , test-framework-hunit
                     , HUnit
                     , z3
                     , language-java
                     , array
                     , pretty
                     , mtl
                     , containers
                     , silently
                     , split
  -- ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://git.science.uu.nl/impresshs/javawlp
