name:                javawlp
version:             0.1.0.0
-- synopsis: description: author: maintainer:
homepage:            https://git.science.uu.nl/impresshs/javawlp
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable javawlp
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , javawlp
                     , optparse-applicative
  default-language:    Haskell2010

library
  hs-source-dirs:      src
  exposed-modules:     Javawlp.Engine.Types
                     , Javawlp.Engine.HelperFunctions
                     , Javawlp.Engine.Folds
                     -- LIR
                     , LogicIR.Expr
                     , LogicIR.Fold
                     , LogicIR.Parser
                     , LogicIR.Null
                     , LogicIR.Pretty
                     , LogicIR.Frontend.Java
                     , LogicIR.Eval
                     -- Checker
                     , SimpleFormulaChecker
                     -- Z3
                     , LogicIR.Backend.Z3.Z3
                     , LogicIR.Backend.Z3.API
                     , LogicIR.Backend.Z3.Model
                     -- QuickCheck
                     , LogicIR.Backend.QuickCheck.Test
                     , LogicIR.Backend.QuickCheck.ModelGenerator
                     -- Java EDSL
                     , Language.Java.Lexer
                     , Language.Java.Parser
                     , Language.Java.Pretty
                     , Language.Java.Syntax
                     , Language.Java.Syntax.Exp
                     , Language.Java.Syntax.Types
  build-depends:       base >= 4.7 && < 5
                     , random
                     , parsec
                     , z3
                     , language-java
                     , array
                     , pretty
                     , mtl
                     , containers
  default-language:    Haskell2010

test-suite javawlp-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       TExamples
                     , TIRParser
                     , TIRTest
                     , TEquivalenceClasses
                     , TModelParser
  build-depends:       base
                     , javawlp
                     , test-framework
                     , test-framework-hunit
                     , HUnit
                     , z3
                     , language-java
                     , array
                     , pretty
                     , mtl
                     , containers
                     , silently
                     , split
  -- ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://git.science.uu.nl/impresshs/javawlp
