name:                javawlp
version:             0.1.0.0
homepage:            https://git.science.uu.nl/impresshs/javawlp
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable javawlp
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , javawlp
                     , optparse-applicative
  default-language:    Haskell2010

library
  hs-source-dirs:      src
  exposed-modules:     JavaHelpers.Types
                     , JavaHelpers.HelperFunctions
                     , JavaHelpers.Folds
                     -- Server
                     , Server
                     -- Checker
                     , Model
                     , API
                     -- LIR
                     , LogicIR.Expr
                     , LogicIR.Fold
                     , LogicIR.Parser
                     , LogicIR.TypeChecker
                     , LogicIR.Preprocess
                     , LogicIR.Pretty
                     , LogicIR.Frontend.Java
                     , LogicIR.Eval
                     , LogicIR.ParserUtils
                     , LogicIR.Normalizer
                     -- Z3
                     , LogicIR.Backend.Z3.Z3
                     , LogicIR.Backend.Z3.API
                     -- QuickCheck
                     , LogicIR.Backend.QuickCheck.API
                     , LogicIR.Backend.QuickCheck.Test
                     , LogicIR.Backend.QuickCheck.ModelGenerator
                     , LogicIR.Backend.QuickCheck.Iterations
  build-depends:       base >= 4.7 && < 5
                     , random
                     , parsec
                     , z3
                     , language-java
                     , array
                     , pretty
                     , mtl
                     , containers
                     , servant
                     , servant-server
                     , servant-docs
                     , servant-swagger
                     , servant-swagger-ui
                     , swagger2
                     , transformers
                     , aeson
                     , scientific
                     , wai
                     , warp
                     , split
                     , mtl
                     , vector
                     , bytestring
                     , text
                     , http-types
                     , lens
                     , deepseq
                     , language-java ==0.2.9
                     , async
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite javawlp-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       TExamples
                     , TIRParser
                     , TEquivalenceClasses
                     , TModelParser
                     , TFeedback
                     , TNormalizer
                     , TServer
  build-depends:       base
                     , javawlp
                     , test-framework
                     , test-framework-hunit
                     , HUnit
                     , z3
                     , language-java
                     , array
                     , pretty
                     , mtl
                     , containers
                     , silently
                     , split
                     , servant-client
                     , servant-server >=0.9.1
                     , warp >=3.2.4
                     , wai >=3.2.1
                     , http-client
                     , http-types
  -- ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://git.science.uu.nl/impresshs/javawlp
